src/test/ui/macros/macro-path-prelude-fail-3.stderr
error: cannot find macro `inline!` in this scope
  --> $DIR/macro-path-prelude-fail-3.rs:2:5
   |
LL |     inline!();
   |     ^^^^^^ help: you could try the macro: `line`

error: aborting due to previous error

